# langgraph-langchain-ai-agents

./: .gitignore  README.md
AI-Course/: main.py  pyproject.toml
AI-Course/1-langchain/3.2-Dataingestion/: 3.2-Dataingestion.ipynb  records.xml
AI-Course/1-langchain/3.3-DataTransformer/: speech.txt
AI-Course/1-langchain/3.3-DataTransformer.ipynb/: 3.3-TextSplitter.ipynb  3.4-CharacterSplitter.ipynb  3.5-HtmlTextSplitter.ipynb  3.6-RecursiveJsonSplitter.ipynb
AI-Course/1-langchain/3.4-Embedding/: 1-openAI.ipynb  2-Ollama.ipynb  3-HuggingFace.ipynb
AI-Course/1-langchain/3.5-VectorStore/: 1-FAISS.ipynb  2-Chroma.ipynb  speech.txt
AI-Course/1-langchain/3.5-VectorStore/chroma_db/: chroma.sqlite3
AI-Course/1-langchain/3.5-VectorStore/faiss_index/: index.faiss  index.pkl
AI-Course/1-langchain/6-Openai-Ollama/: 1-gettingStarted.ipynb  2-Simple_Ai.ipynb  3-Basic_Stuff_documents.ipynb
AI-Course/1-langchain/7-Building-Basic_LLM/: 1-Groq_APi.ipynb  2-Serve.py
