[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv==2.1.3",
    "beautifulsoup4>=4.15.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
