[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv==2.1.3",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "grandalf>=0.8",
    "groq>=0.37.1",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langserve>=0.3.3",
    "langsmith>=0.10.4",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "openai>=2.45.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "unstructured>=0.24.1",
    "uvicorn>=0.51.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
