[project]
name = "ai-course"
version = "0.1.0"
description = "AI Course using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [

    # ==========================================================
    # LLM Providers (Connect to different Large Language Models)
    # ==========================================================

    "openai>=2.45.0",                 # Access OpenAI models (GPT-4o, GPT-4.1, GPT-5, etc.)
    "groq>=0.37.1",                   # Access Groq's ultra-fast inference APIs
    "langchain-openai>=1.3.5",        # LangChain wrapper for OpenAI models
    "langchain-groq>=1.1.3",          # LangChain wrapper for Groq models
    "langchain-google-genai>=4.2.7",  # LangChain wrapper for Google's Gemini models
    "langchain-anthropic>=1.4.8",     # LangChain wrapper for Anthropic Claude models
    "langchain-ollama>=1.1.0",        # Connect LangChain with locally running Ollama models

    # ==========================================================
    # LangChain Framework (Core Framework for LLM Applications)
    # ==========================================================

    "langchain>=1.3.13",              # Main framework to build AI applications
                                        # Supports prompts, chains, memory,
                                        # RAG, tools, and agents.

    "langchain-core>=1.4.9",          # Core abstractions used by LangChain
                                        # (Runnable, PromptTemplate,
                                        # Messages, Output Parsers, etc.)

    "langchain-community>=0.4.2",     # Community integrations
                                        # PDF loaders
                                        # Web loaders
                                        # Vector stores
                                        # Search tools
                                        # Databases

    "langchain-text-splitters>=1.1.2",# Splits large documents into chunks
                                        # Used before embeddings
                                        # RecursiveCharacterTextSplitter
                                        # CharacterTextSplitter

    "langchain-experimental>=0.4.2",  # Experimental features
                                        # DataFrame Agent
                                        # Python REPL
                                        # Advanced experimental chains

    # ==========================================================
    # Agent Framework
    # ==========================================================

    "langgraph>=1.2.9",               # Build stateful AI agents
                                        # Single Agent
                                        # Multi-Agent
                                        # Memory
                                        # Workflow
                                        # Conditional routing

    "langsmith>=0.10.4",              # Observability platform
                                        # Prompt tracing
                                        # Debugging
                                        # Token usage
                                        # Performance metrics
                                        # Evaluation

    # ==========================================================
    # Vector Databases (Store Embeddings)
    # ==========================================================

    "chromadb>=1.5.9",                # Local vector database
                                        # Store document embeddings
                                        # Semantic similarity search

    "faiss-cpu>=1.14.3",              # Facebook AI Similarity Search
                                        # Extremely fast nearest neighbour search
                                        # Large-scale embedding retrieval

    "langchain-chroma>=1.1.0",        # LangChain integration for Chroma DB

    # ==========================================================
    # Document Loading & Parsing
    # ==========================================================

    "pypdf>=6.14.2",                  # Read and extract text from PDF files

    "pymupdf>=1.28.0",                # Faster PDF processing
                                        # Extract text
                                        # Images
                                        # Tables

    "beautifulsoup4>=4.15.0",         # Parse HTML/XML webpages
                                        # Used with WebBaseLoader

    "lxml>=6.1.1",                    # High-performance HTML/XML parser

    "unstructured>=0.24.1",           # Parse multiple document formats
                                        # PDF
                                        # Word
                                        # PowerPoint
                                        # HTML
                                        # Email

    # ==========================================================
    # Embedding Models
    # ==========================================================

    "sentence-transformers>=5.6.0",   # Hugging Face embedding models
                                        # Convert text into vectors
                                        # Used in RAG
                                        # Semantic Search

    # ==========================================================
    # Environment Variables
    # ==========================================================

    "python-dotenv>=1.2.2",           # Load environment variables
                                        # Reads .env file
                                        # API Keys
                                        # Secrets
                                        # Database URLs

]